--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "heroku-prebuild": "npm install --dev"
   },
   "dependencies": {
     "vue": "^2.5.2",
@@ -43,6 +44,7 @@
     "rimraf": "^2.6.0",
     "sass-loader": "^7.1.0",
     "semver": "^5.3.0",
+    "serve": "^11.1.0",
     "shelljs": "^0.7.6",
     "style-loader": "^1.0.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
