--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   "author": "Daniel Cook",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.1"
   },
