--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "firebase": "^6.3.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.1",
+    "vuelidate": "^0.7.4",
     "vuetify": "^2.0.0",
     "vuex": "^3.1.1"
   },
