--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "uglify-es": "^3.3.9",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "url-loader": "^1.1.2",
     "vue-cli-plugin-vuetify": "^0.6.1",
     "vue-jest": "^3.0.4",
